--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/aos/dist/aos.css"
+
             ],
             "scripts": [
+              "node_modules/aos/dist/aos.js"
             ]
           },
           "configurations": {
@@ -98,6 +101,7 @@
             ],
             "styles": [
               "src/styles.scss"
+
             ],
             "scripts": []
           }
