--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.2.2",
+    "ng-circle-progress": "^1.6.0",
     "notiflix": "^3.2.5",
+    "progressbar.js": "^1.1.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
