--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,10 @@
 
             ],
             "scripts": [
-              "node_modules/aos/dist/aos.js"
+              "node_modules/aos/dist/aos.js",
+              "./node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+
             ]
           },
           "configurations": {
