--- a/angular.json
+++ b/angular.json
@@ -29,13 +29,16 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/aos/dist/aos.css"
-
+              "node_modules/aos/dist/aos.css",
+                "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              
+              
             ],
             "scripts": [
               "node_modules/aos/dist/aos.js",
               "./node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+              "node_modules/swiper/swiper-bundle.min.js"
 
             ]
           },
