--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/router": "^15.2.5",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@types/swiper": "^6.0.0",
-    "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "ng-bootstrap": "^1.6.3",
     "ng-circle-progress": "^1.6.0",
     "notiflix": "^3.2.5",
     "progressbar.js": "^1.1.0",
